Fix product list overflow

--- a/src/app/component/CategoryProductList/CategoryProductList.style.scss
+++ b/src/app/component/CategoryProductList/CategoryProductList.style.scss
@@ -15,7 +15,7 @@
     grid-auto-rows: max-content;
     padding-bottom: 2rem;
 
-    @include mobile {
+    @include tablet {
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 0.5rem;
         border: 0;
@@ -31,7 +31,7 @@
         grid-template-columns: inherit;
         grid-column: 1/4;
 
-        @include mobile {
+        @include tablet {
             grid-column: span 2;
         }
     }
